[gd_scene load_steps=5 format=3 uid="uid://02g84723vs21"]

[ext_resource type="Script" uid="uid://ctmpjdstcvfpy" path="res://PickUpSystem/pickable_object.gd" id="1_y4442"]
[ext_resource type="Resource" uid="uid://v6na6ou6kxlj" path="res://PickUpSystem/mushroom/alien_mushroom.tres" id="2_cphut"]
[ext_resource type="Script" uid="uid://b1kccbwcfiryn" path="res://scripts/interactable.gd" id="3_ac71b"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ac71b"]

[node name="pickable_object" type="Node2D"]
z_index = -3
z_as_relative = false
script = ExtResource("1_y4442")
selected_object = ExtResource("2_cphut")

[node name="interact_object" type="Area2D" parent="."]
script = ExtResource("3_ac71b")
metadata/_custom_type_script = "uid://b1kccbwcfiryn"

[node name="interact_collision" type="CollisionShape2D" parent="interact_object"]
shape = SubResource("RectangleShape2D_ac71b")

[connection signal="player_interacted" from="interact_object" to="." method="_on_player_interacted"]
